--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,6 +18,86 @@
     <body>
         <h1>Hello, world!</h1>
 
+
+
+        <!-- ========== Footer Start ========== -->
+        <footer id="footer">
+            <div class="footer-wrapper">
+                <div class="footer-divisor">
+                    <span class="msg-divisor-left">
+                        Ready to get stated?
+                        <span style="font-weight: normal; margin-left: 30px">Get in touch to discuss your cybersecurity
+                            needs.</span>
+                    </span>
+                    <span class="msg-divisor-right">JOIN NOW</span>
+                </div>
+        
+                <div class="footer-wrapper-top">
+                    <div class="footer-box-lists">
+                        <div>
+                            <img class="footer-logo" src="assets/img/png/logo.png" alt="Logo" />
+                        </div>
+                        <div class="footer-list">
+                            <p>COMPANY</p>
+                            <ul>
+                                <li>About us</li>
+                                <li>Certifications</li>
+                                <li>Partners</li>
+                            </ul>
+                        </div>
+                        <div class="footer-list">
+                            <p>ABOUT</p>
+                            <ul>
+                                <li>Privacy Policy</li>
+                                <li>Cookie Policy</li>
+                                <li>Terms of Use</li>
+                                <li>FAQ</li>
+                            </ul>
+                        </div>
+                        <div class="footer-list">
+                            <p>GET IN TOUCH</p>
+                            <ul>
+                                <li>Contact Us</li>
+                                <li>Jobs</li>
+                                <li>Locations</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-social-media">
+                        <p style="font-weight: bolder; font-size: larger">
+                            SOCIAL MEDIA
+                        </p>
+                        <p style="
+                                        font-weight: bolder;
+                                        color: grey;
+                                        margin-bottom: 20px;
+                                    ">
+                            Follow Grail
+                        </p>
+                        <a class="fab fa-twitter fa-2x" href="https://www.twitter.com/" target="_blank"
+                            style="margin-right: 10px;"></a>
+                        <a class="fab fa-facebook fa-2x" href="https://www.facebook.com/" target="_blank"
+                            style="margin-right: 10px;"></a>
+                        <a class="fab fa-instagram fa-2x" href="https://www.instagram.com/" target="_blank"></a>
+                    </div>
+                </div>
+        
+                <div class="footer-wrapper-bot">
+                    <div class="footer-legal">
+                        <p>
+                            Copyright © 2020 Grail, Inc. Todos los derechos
+                            reservados.
+                        </p>
+                        <div>
+                            <a class="linkFooter" href="#">Privacidad & Política de Cookies |</a>
+                            <a class="linkFooter" href="#">Privacidad | </a>
+                            <a class="linkFooter" href="#">Documentacion legal</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- ========== End Footer ========== -->
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
