--- a/index.html
+++ b/index.html
@@ -16,7 +16,108 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <header>
+            <nav class="navbar fixed-top navbar-light bg-light">
+                <div>
+                    <ul class="navbar-nav flex-row">
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#"
+                                >Home <span class="sr-only">(current)</span></a
+                            >
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                </div>
+                <a class="navbar-brand" href="#">Navbar</a>
+                <div>
+                    <ul class="navbar-nav flex-row">
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#"
+                                >Home <span class="sr-only">(current)</span></a
+                            >
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <!-- <div
+                id="carouselExampleFade"
+                class="carousel slide carousel-fade"
+                data-ride="carousel"
+            >
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                </div>
+                <a
+                    class="carousel-control-prev"
+                    href="#carouselExampleFade"
+                    role="button"
+                    data-slide="prev"
+                >
+                    <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                    ></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a
+                    class="carousel-control-next"
+                    href="#carouselExampleFade"
+                    role="button"
+                    data-slide="next"
+                >
+                    <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                    ></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div> -->
+            <div
+                style="background-color: grey; width: 100%; min-height: 100vh"
+            ></div>
+        </section>
+        <section>
+            <div
+                style="background-color: white; width: 100%; min-height: 100vh"
+            ></div>
+        </section>
+        <section>
+            <div
+                style="background-color: grey; width: 100%; min-height: 100vh"
+            ></div>
+        </section>
+        <section>
+            <div
+                style="background-color: white; width: 100%; min-height: 100vh"
+            ></div>
+        </section>
+        <section>
+            <div
+                style="background-color: grey; width: 100%; min-height: 100vh"
+            ></div>
+        </section>
+        <footer></footer>
 
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
