--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
             crossorigin="anonymous"
         />
 
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"
+        ></script>
+
         <script src="main.js"></script>
     </head>
     <body>
         <header>
-            <nav class="navbar fixed-top navbar-light bg-light">
+            <!-- <nav class="navbar fixed-top navbar-light bg-light">
                 <div>
                     <ul class="navbar-nav flex-row">
                         <li class="nav-item mx-2">
@@ -49,23 +60,116 @@
                         </li>
                     </ul>
                 </div>
+            </nav> -->
+            <nav
+                class="navbar navbar-expand-sm fixed-top navbar-light bg-light"
+            >
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- <a class="navbar-brand mx-auto" href="#">Navbar</a> -->
+                <a class="navbar-brand mx-auto d-sm-none" href="#">Navbar</a>
+
+                <div
+                    class="clearfix collapse navbar-collapse"
+                    id="navbarNavAltMarkup"
+                >
+                    <ul class="navbar-nav float-sm-left">
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#"
+                                >Home <span class="sr-only">(current)</span></a
+                            >
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                    <div></div>
+                    <a class="navbar-brand mx-auto d-none d-sm-block" href="#"
+                        >Navbar</a
+                    >
+
+                    <ul class="navbar-nav float-sm-right">
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#"
+                                >Home <span class="sr-only">(current)</span></a
+                            >
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <section>
-            <!-- <div
+            <div
                 id="carouselExampleFade"
                 class="carousel slide carousel-fade"
                 data-ride="carousel"
             >
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="..." />
+                        <div id="img1" class="d-block vh-100"></div>
+                        <!-- <img
+                            src="img/cover1.jpg"
+                            class="d-block img-fluid vh-100"
+                            alt="..."
+                        /> -->
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="..." />
+                        <div id="img2" class="d-block vh-100"></div>
+                        <!-- <img
+                            src="img/cover2.jpg"
+                            class="d-block img-fluid vh-100"
+                            alt="..."
+                        /> -->
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="..." />
+                        <div id="img3" class="d-block vh-100"></div>
+                        <!-- <img
+                            src="img/cover3.jpg"
+                            class="d-block img-fluid vh-100"
+                            alt="..."
+                        /> -->
+                    </div>
+                    <div class="carousel-item">
+                        <div id="img4" class="d-block vh-100"></div>
+                        <!-- <img
+                            src="img/cover4.jpg"
+                            class="d-block img-fluid vh-100"
+                            alt="..."
+                        /> -->
+                    </div>
+                    <div class="carousel-item">
+                        <div id="img5" class="d-block vh-100"></div>
+                        <!-- <img
+                            src="img/cover5.jpg"
+                            class="d-block img-fluid vh-100"
+                            alt="..."
+                        /> -->
+                    </div>
+                    <div class="carousel-item">
+                        <div id="img6" class="d-block vh-100"></div>
+                        <!-- <img
+                            src="img/cover6.jpg"
+                            class="d-block img-fluid vh-100"
+                            alt="..."
+                        /> -->
                     </div>
                 </div>
                 <a
@@ -92,12 +196,14 @@
                     ></span>
                     <span class="sr-only">Next</span>
                 </a>
-            </div> -->
-            <div
+            </div>
+            <!-- <div
                 style="background-color: grey; width: 100%; min-height: 100vh"
-            ></div>
+            ></div> -->
         </section>
         <section>
+            <div class="d-flex align-items-stretch"></div>
+
             <div
                 style="background-color: white; width: 100%; min-height: 100vh"
             ></div>
@@ -118,16 +224,5 @@
             ></div>
         </section>
         <footer></footer>
-
-        <script
-            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"
-        ></script>
     </body>
 </html>
