--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <!-- <a class="navbar-brand mx-auto" href="#">Navbar</a> -->
-                <a class="navbar-brand mx-auto d-sm-none" href="#">Navbar</a>
+
+                <a class="navbar-brand mx-auto d-sm-none" href="#">Navbar1</a>
 
                 <div
                     class="clearfix collapse navbar-collapse"
@@ -96,8 +96,9 @@
                         </li>
                     </ul>
                     <div></div>
+
                     <a class="navbar-brand mx-auto d-none d-sm-block" href="#"
-                        >Navbar</a
+                        >Navbar2</a
                     >
 
                     <ul class="navbar-nav float-sm-right">
@@ -202,11 +203,29 @@
             ></div> -->
         </section>
         <section>
-            <div class="d-flex align-items-stretch"></div>
-
-            <div
-                style="background-color: white; width: 100%; min-height: 100vh"
-            ></div>
+            <div class="min-vh-100" style="background-color: white">
+                <div class="container-fluid h-100">
+                    <div class="row align-items-center align-items-stretched">
+                        <div class="col-8">
+                            .col-8
+                            <div class="row">
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                            </div>
+                            <div class="row mx-auto">
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                                <div class="col-2">.col-2</div>
+                            </div>
+                        </div>
+                        <div class="col-4">.col-4</div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             <div
