--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
                     <span class="mr-5 font-weight-bold"
                         >Ready to get started?</span
                     >
-                    <span class="hide"
+                    <span class="d-none d-md-inline-block"
                         >Get in touch to discuss your cybersecurity needs</span
                     >
                 </div>
                 <div>
-                    <span class="hide">JOIN NOW</span>
+                    <span class="d-none d-sm-inline-block">JOIN NOW</span>
                 </div>
             </div>
 
