--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
             ></div>
         </section>
 
+        <!-- Start footer -->
         <footer class="container-fluid footer">
             <div class="divisor row py-3 px-3 d-flex justify-content-between">
                 <div>
@@ -224,18 +225,32 @@
                         </ul>
                     </div>
 
+                    <!-- About -->
                     <div class="col-md-3 mx-auto mb-4">
-                        <h6 class="font-weight-bold">COMPANY</h6>
-                        <hr
-                            class="bg-success mb-4 mt-0 d-inline-block mx-auto"
-                            style="width: 125px; height: 2px"
-                        />
-                        <ul class="list-unstyled">
-                            <li class="my-2"><a href="#">About us</a></li>
+                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
+                        <ul class="list-unstyled mt-3">
+                            <li class=""><a href="#">About us</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Get in touch -->
+                    <div class="col-md-3 mx-auto mb-4">
+                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
+                        <ul class="list-unstyled mt-3">
+                            <li class=""><a href="#">About us</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Technical support -->
+                    <div class="col-md-3 mx-auto mb-4">
+                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
+                        <ul class="list-unstyled mt-3">
+                            <li class=""><a href="#">About us</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
+        <!-- End footer -->
     </body>
 </html>
