--- a/index.html
+++ b/index.html
@@ -154,28 +154,204 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <!-- <div
-                style="background-color: grey; width: 100%; min-height: 100vh"
-            ></div> -->
         </section>
         <section>
             <div class="min-vh-100" style="background-color: white">
                 <div class="container-fluid h-100">
                     <div class="row align-items-center align-items-stretched">
                         <div class="col-8">
-                            .col-8
                             <div class="row">
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="row mx-auto">
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
-                                <div class="col-2">.col-2</div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card w-100">
+                                        <img
+                                            class="card-img-top"
+                                            src="img_avatar1.png"
+                                            alt="Card image"
+                                            style="width: 100%"
+                                        />
+                                        <div class="card-body">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">
+                                                Some example text some example
+                                                text. John Doe is an architect
+                                                and engineer
+                                            </p>
+                                            <a href="#" class="btn btn-primary"
+                                                >See Profile</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-4">.col-4</div>
