--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <script src="https://kit.fontawesome.com/7f7a5c4796.js" crossorigin="anonymous"></script>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -387,7 +388,8 @@
 
         <!-- Start footer -->
         <footer class="container-fluid footer">
-            <div class="divisor row py-3 px-3 d-flex justify-content-between">
+            <!-- Divisor -->
+            <div class="divisor row mt-5 py-4 px-3 mb-5 d-flex justify-content-between">
                 <div>
                     <span class="mr-5 font-weight-bold"
                         >Ready to get started?</span
@@ -400,42 +402,88 @@
                     <span class="d-none d-sm-inline-block">JOIN NOW</span>
                 </div>
             </div>
+            <!-- End Divisor -->
 
-            <div class="container text-center text-md-left mt-5">
+            <!-- Upper Container -->
+            <div class="container-fluid px-0">
                 <div class="row">
-                    <!-- Company -->
-                    <div class="col-md-3 mx-auto mb-4">
-                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
-                        <ul class="list-unstyled mt-3">
-                            <li class=""><a href="#">About us</a></li>
-                        </ul>
-                    </div>
+                    <!-- Links -->
+                    <div class="row col-sm-8 px-0">
+                        <!-- Company -->
+                        <div class="col col-md-auto mr-5">
+                            <h6 class="font-weight-bold footer-ul">COMPANY</h6>
+                            <ul class="list-unstyled mt-3">
+                                <li class=""><a class="footer-links" href="#">About us</a></li>
+                                <li class=""><a class="footer-links" href="#">Certification</a></li>
+                                <li class=""><a class="footer-links" href="#">Customer Stories</a></li>
+                                <li class=""><a class="footer-links" href="#">Partners</a></li>
+                            </ul>
+                        </div>
 
-                    <!-- About -->
-                    <div class="col-md-3 mx-auto mb-4">
-                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
-                        <ul class="list-unstyled mt-3">
-                            <li class=""><a href="#">About us</a></li>
-                        </ul>
-                    </div>
+                        <!-- About -->
+                        <div class="col col-md-auto mr-5">
+                            <h6 class="font-weight-bold footer-ul">ABOUT</h6>
+                            <ul class="list-unstyled mt-3">
+                                <li class=""><a class="footer-links" href="#">Privacy Policy</a></li>
+                                <li class=""><a class="footer-links" href="#">Cookie Policy</a></li>
+                                <li class=""><a class="footer-links" href="#">Terms of Use</a></li>
+                                <li class=""><a class="footer-links" href="#">FAQ</a></li>
+                            </ul>
+                        </div>
 
-                    <!-- Get in touch -->
-                    <div class="col-md-3 mx-auto mb-4">
-                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
-                        <ul class="list-unstyled mt-3">
-                            <li class=""><a href="#">About us</a></li>
-                        </ul>
-                    </div>
+                        <!-- Get in touch -->
+                        <div class="col col-md-auto mr-5">
+                            <h6 class="font-weight-bold footer-ul">GET IN TOUCH</h6>
+                            <ul class="list-unstyled mt-3">
+                                <li class=""><a class="footer-links" href="#">Contact us</a></li>
+                                <li class=""><a class="footer-links" href="#">Jobs</a></li>
+                                <li class=""><a class="footer-links" href="#">Locations</a></li>
+                            </ul>
+                        </div>
 
-                    <!-- Technical support -->
-                    <div class="col-md-3 mx-auto mb-4">
-                        <h6 class="font-weight-bold m-0 p-0">COMPANY</h6>
-                        <ul class="list-unstyled mt-3">
-                            <li class=""><a href="#">About us</a></li>
-                        </ul>
+                        <!-- Technical support -->
+                        <div class="col col-md-auto">
+                            <h6 class="font-weight-bold footer-ul">TECHNICAL SUPPORT</h6>
+                            <ul class="list-unstyled mt-3">
+                                <li class=""><a class="footer-links" href="#">Incident?</a></li>
+                                <li class=""><a class="footer-links" href="#">Communities</a></li>
+                                <li class=""><a class="footer-links" href="#">Contact Support</a></li>
+                                <li class=""><a class="footer-links" href="#">Customer Portal</a></li>
+                                <li class=""><a class="footer-links" href="#">Documentation Portal</a></li>
+                                <li class=""><a class="footer-links" href="#">Report Security Issue</a></li>
+                            </ul>
+                        </div>
                     </div>
+                    <!-- End Links -->
+
+                    <!-- Media -->
+                    <div class="col-sm-4 px-0 ml-4">
+                        <div class="float-right">
+                            <div class="mb-4">
+                                <p class="footer-media-title mb-0">GIFT DEMO CARDS</p>
+                                <p class="footer-media-text">Give a Demo Today</p>
+                            </div>
+                            <div>
+                                <p class="footer-media-title mb-0">SOCIAL MEDIA</p>
+                                <p class="footer-media-text">Give a Demo Today</p>
+                            </div>
+                            <div class="">
+                                <a class="mr-2" href="#"><i class="fab fa-twitter fa-lg text-dark"></i></a>
+                                <a class="mr-2" href="#"><i class="fab fa-facebook fa-lg text-dark"></i></a>
+                                <a href="#"><i class="fab fa-instagram fa-lg text-dark"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Media -->
                 </div>
             </div>
+            <!-- End Upper Container -->
+
+            <!-- Lower Container -->
+            <div>
+
+            </div>
+            <!-- End Lower Container -->
         </footer>
         <!-- End footer -->
     </body>
