--- a/index.html
+++ b/index.html
@@ -167,17 +167,16 @@
         </section>
         <section>
             <div class="min-vh-100" style="background-color: white">
-                <div class="container-fluid h-100">
+                <div class="container-fluid h-100 my-3">
                     <div class="row align-items-center align-items-stretched">
                         <div class="col-8">
-                            <div class="row">
+                            <div class="row justify-content-md-center my-3">
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/iso.svg"
                                             alt="Card image"
-                                            style="width: 100%"
                                         />
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
@@ -186,19 +185,15 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/gdpr.svg"
                                             alt="Card image"
-                                            style="width: 100%"
                                         />
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
@@ -207,19 +202,15 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/ens.svg"
                                             alt="Card image"
-                                            style="width: 100%"
                                         />
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
@@ -228,19 +219,15 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/04-solutions.svg"
                                             alt="Card image"
-                                            style="width: 100%"
                                         />
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
@@ -249,19 +236,15 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/managed.svg"
                                             alt="Card image"
-                                            style="width: 100%"
                                         />
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
@@ -270,21 +253,19 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row mx-auto">
+                            <div
+                                class="row mx-auto justify-content-md-center my-3"
+                            >
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/industrial.svg"
                                             alt="Card image"
-                                            style="width: 100%"
                                         />
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
@@ -293,17 +274,14 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/forensic.svg"
                                             alt="Card image"
                                             style="width: 100%"
                                         />
@@ -314,17 +292,14 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/audits.svg"
                                             alt="Card image"
                                             style="width: 100%"
                                         />
@@ -335,17 +310,14 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="card w-100">
                                         <img
-                                            class="card-img-top"
-                                            src="img_avatar1.png"
+                                            class="card-img-top w-75 mx-auto my-3"
+                                            src="assets/img/svg/products/training.svg"
                                             alt="Card image"
                                             style="width: 100%"
                                         />
@@ -356,9 +328,6 @@
                                                 text. John Doe is an architect
                                                 and engineer
                                             </p>
-                                            <a href="#" class="btn btn-primary"
-                                                >See Profile</a
-                                            >
                                         </div>
                                     </div>
                                 </div>
