--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a class="navbar-brand mx-auto d-sm-none" href="#">Navbar1</a>
-
+                <a class="navbar-brand mx-auto d-sm-none" href="#">
+                    <div class="d-flex flex-column align-items-center">
+                        <p class="header-title">GRAIL</p>
+                        <p class="header-subtitle">CYBER TECH</p>
+                    </div>
+                </a>
                 <div
                     class="clearfix collapse navbar-collapse"
                     id="navbarNavAltMarkup"
@@ -60,33 +64,39 @@
                     <ul class="navbar-nav float-sm-left">
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="#"
-                                >Home <span class="sr-only">(current)</span></a
+                                >SERVICES
+                                <span class="sr-only">(current)</span></a
                             >
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">ABOUT US</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">EMPLOYMENT</a>
                         </li>
                     </ul>
                     <div></div>
 
-                    <a class="navbar-brand mx-auto d-none d-sm-block" href="#"
-                        >Navbar2</a
-                    >
+                    <a class="navbar-brand mx-auto d-none d-sm-block" href="#">
+                        <div class="d-flex flex-column align-items-center">
+                            <p class="header-title">GRAIL</p>
+                            <p class="header-subtitle">CYBER TECH</p>
+                        </div>
+                    </a>
 
                     <ul class="navbar-nav float-sm-right">
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="#"
-                                >Home <span class="sr-only">(current)</span></a
+                                >LOCATION<span class="sr-only"
+                                    >(current)</span
+                                ></a
                             >
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">CONTACT US</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">SOCIAL MEDIA</a>
                         </li>
                     </ul>
                 </div>
@@ -175,18 +185,35 @@
             </div>
         </section>
         <section>
-            <div class="min-vh-100" style="background-color: white">
-                <div class="container-fluid h-100 my-3">
-                    <div class="row align-items-center align-items-stretched">
-                        <div class="col-8">
-                            <div class="row justify-content-md-center my-3">
+            <div
+                class="min-vh-100"
+                style="
+                    background-image: url(assets/img/Hrtz1_12731fea-7a52-4e0e-afcb-ed0d63708132.ai);
+                    height: 100%;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                "
+            >
+                <div class="container-fluid vh-100 my-5 d-flex">
+                    <div class="row align-items-center align-self-center">
+                        <div class="col-7">
+                            <div class="row justify-content-center my-3">
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/iso.svg"
-                                            alt="Card image"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/iso.svg"
+                                                alt="Card image"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -198,12 +225,20 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/gdpr.svg"
-                                            alt="Card image"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/gdpr.svg"
+                                                alt="Card image"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -215,12 +250,20 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/ens.svg"
-                                            alt="Card image"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/ens.svg"
+                                                alt="Card image"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -232,12 +275,20 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/04-solutions.svg"
-                                            alt="Card image"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/04-solutions.svg"
+                                                alt="Card image"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -249,12 +300,20 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/managed.svg"
-                                            alt="Card image"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/managed.svg"
+                                                alt="Card image"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -270,12 +329,20 @@
                                 class="row mx-auto justify-content-md-center my-3"
                             >
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/industrial.svg"
-                                            alt="Card image"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/industrial.svg"
+                                                alt="Card image"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -287,13 +354,21 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/forensic.svg"
-                                            alt="Card image"
-                                            style="width: 100%"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/forensic.svg"
+                                                alt="Card image"
+                                                style="width: 100%"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -305,13 +380,21 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/audits.svg"
-                                            alt="Card image"
-                                            style="width: 100%"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/audits.svg"
+                                                alt="Card image"
+                                                style="width: 100%"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -323,13 +406,21 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="card w-100">
-                                        <img
-                                            class="card-img-top w-75 mx-auto my-3"
-                                            src="assets/img/svg/products/training.svg"
-                                            alt="Card image"
-                                            style="width: 100%"
-                                        />
+                                    <div class="card w-100 h-100">
+                                        <div
+                                            style="
+                                                height: 152px;
+                                                background-color: hotpink;
+                                                text-align: center;
+                                            "
+                                        >
+                                            <img
+                                                class="card-img-top w-50 mx-auto my-3"
+                                                src="assets/img/svg/products/training.svg"
+                                                alt="Card image"
+                                                style="width: 100%"
+                                            />
+                                        </div>
                                         <div class="card-body">
                                             <h4 class="card-title">John Doe</h4>
                                             <p class="card-text">
@@ -342,7 +433,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">.col-4</div>
+                        <div class="col-4">
+                            <div class="d-flex flex-column align-items-center">
+                                <h3>SECURE DEVELOPMENT METHODOLOGY</h3>
+                                <h2>Products & Solutions</h2>
+                                <p class="productssolutions-text">
+                                    Detection of code vulnerabilities, analysis
+                                    of communication protocols and analysis of
+                                    applications for mobile devices.
+                                </p>
+                                <h3>SHOP NOW</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
